--- a/css/seance-1/exo-3/assets/css/index.css
+++ b/css/seance-1/exo-3/assets/css/index.css
@@ -11,7 +11,7 @@ hr {
 
 h1 {
     margin: 5%;
-    border-style: groove;
+    border-style: solid;
     border-color: black;
     color: red;
     background-color: yellow;
