--- a/css/seance-1/exo-4/assets/css/index.css
+++ b/css/seance-1/exo-4/assets/css/index.css
@@ -25,7 +25,7 @@ div {
 
 #id1 {
   background-color: white;
-  border-style: groove;
+  border-style: solid;
 }
 
 p {
@@ -34,7 +34,7 @@ p {
 }
 
 p.bloc {
-  border-left-style: groove;
+  border-left-style: solid;
   margin-left: 5%;
   border-width: 3px;
   padding-left: 5px;
